# FlashFuzzy

./: .gitignore  .npmignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_NPM.md  package-lock.json  package.json  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
bindings/android/: README.md
bindings/android/flashfuzzy/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
bindings/android/flashfuzzy/src/main/java/com/flashfuzzy/: FlashFuzzy.java  SearchResult.java
bindings/android/flashfuzzy/src/main/kotlin/com/flashfuzzy/: FlashFuzzyKt.kt
bindings/go/: README.md  flashfuzzy.go  flashfuzzy_test.go  go.mod
bindings/java/: Cargo.toml  README.md  pom.xml
bindings/java/src/: lib.rs
bindings/java/src/main/java/com/flashfuzzy/: FlashFuzzy.java  SearchResult.java
bindings/java/src/test/java/com/flashfuzzy/: FlashFuzzyTest.java
bindings/python/: Cargo.toml  README.md  pyproject.toml
js/src/: index.ts
rust/ffi/: Cargo.toml
rust/ffi/src/: lib.rs
rust/wasm/: Cargo.toml
rust/wasm/src/: lib.rs
tests/: flash-fuzzy.test.ts
