[package]
name = "flash-fuzzy-wasm"
description = "WebAssembly build of Flash-Fuzzy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
flash-fuzzy-core = { path = "../core" }
